<resources>
    <string name="app_name">CONECTA 4</string>
    <string name="c1">1</string>
    <string name="c2">2</string>
    <string name="c3">3</string>
    <string name="c4">4</string>
    <string name="c5">5</string>
    <string name="c6">6</string>
    <string name="gameOverTitle">El Juego ha terminado!!</string>
    <string name="noValido">Movimiento no válido!!</string>
    <string name="Tablas"> EMPATE</string>
    <string name="Error"> ERROR!!</string>
    <string name="butt_jugar"> Jugar</string>
    <string name="butt_ayuda"> Ayuda</string>
    <string name="butt_punt"> Puntuacion</string>
    <string name="butt_login"> Login</string>
    <string name="butt_top">Top10</string>
    <string name="menu_text">Menu</string>
    <string name="title_activity_login">Sign in</string>
    <string name="acercaDe">Acerca de</string>
    <string name="Prefs">Preferencias</string>
    <string name="Musica_menu">Musica</string>
    <string name="Tablero_menu">Tablero</string>
    <string name="Figura_menu">Figura</string>
    <string name="TableroRojo">Tablero Rojo</string>
    <string name="TableroMarron">Tablero Marron</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_fullscreen">Conecta4</string>
    <string name="title_activity_Preference">Preferences</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">CONECTA4\nTOQUE PARA EMPEZAR</string>


    <string name="longinFirstTextViewText">Login</string>
    <string name="loginFirstEditTextHint">Nombre de usuario</string>
    <string name="loginSecondEditTextHint">Clave secreta</string>
    <string name="loginLoginButtonText">Entrar</string>
    <string name="loginCancelButtonText">Salir</string>
    <string name="loginNewUserButtonText">Nuevo usuario</string>
    <string name="loginAlertDialogTitle">Error</string>
    <string name="loginAlertDialogMessage">Login fallido</string>
    <string name="loginAlertDialogNeutralButtonText">Inténtelo de nuevo</string>

    <string name="editTextPrefTitle">Nombre del jugador</string>
    <string name="editTextPrefSummary">Pulse para teclear el nombre del jugador</string>
    <string name="secondCategoryPrefTitle">Ajustes del juego</string>
    <string name="listPrefTitle">Tipo de figura</string>
    <string name="listPrefSummary">Pulse para mostrar la lista</string>
    <string name="checBoxPrefTitle">Música de fondo</string>
    <string name="checBoxPrefSummary">Marque si desea escuchar música</string>
    <string name="listPrefDialogTitle">Elija la figura inicial</string>
    <string name="preferencesText">Ajustes</string>


    <string name="action_settings">Ajustes</string>
    <string name="gameOverMessage">¿Quiere jugar otra partida?</string>
    <string name="initialImage">Imagen inicial del juego</string>
    <string name="aboutText">Acerca de</string>
    <string name="sendMessageText">Enviar mensaje</string>
<string name="aboutMessage">Cha cha cha es un juego solitario
en el que hemos de comer una a una las fichas saltando por encima de ellas, solo en vertical u horizontal, hacia la casilla adyacente que se encuentre vacía. El objetivo es dejar
la última ficha en el centro del tablero, el
lugar que comenzó libre.</string>
    <string name="accountFirstTextViewText">Nuevo Usuario</string>
    <string name="accountFirstEditTextHint">Nombre de Usuario</string>
    <string name="accountSecondEditTextHint">Contraseña</string>
    <string name="accountThirdEditTextHint">Confirme la contraseña</string>

    <string name="accountAcceptButtonText">Aceptar</string>
    <string name="accountCancelButtonText">Cancelar</string>
    <string name="accountFirstToastMessage">Nuevo usuario creado correctamente</string>
    <string name="accountSecondToastMessage">Debe rellenar todos los campos</string>
    <string name="accountThirdToastMessage">Error al crear usuario</string>
    <string name="butt_nuevaPartida">Nueva Partida</string>
    <string name="butt_unirPartida">Unirse a partida creada</string>
    <string name="title_activity_Partidas">Elije Partida</string>
    <string name="jugador">Nombre</string>
    <string name="tiempo">Tiempo</string>
    <string name="puntuacion">Puntuacion</string>


</resources>
