<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/Fondo"
    tools:context="root.cristinakasnerapp2.MenuActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/linearLayout"
        android:background="@color/Fondo"
        android:layout_alignParentTop="true">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/butt_jugar"
            android:id="@+id/button_jugar"
            android:onClick="irjugar"
            android:layout_weight="0.06"
            android:layout_gravity="center_horizontal"
            android:theme="@style/menu_button"
            android:layout_marginBottom="3dp" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/butt_login"
            android:id="@+id/button_login"
            android:onClick="irlogin"
            android:layout_weight="0.06"
            android:layout_gravity="center_horizontal"
            android:theme="@style/menu_button"
            android:layout_marginBottom="3dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/butt_punt"
            android:id="@+id/button_punt"
            android:onClick="irpunt"
            android:layout_weight="0.06"
            android:layout_gravity="center_horizontal"
            android:theme="@style/menu_button"
            android:layout_marginBottom="3dp" />


    </LinearLayout>

</RelativeLayout>
